deployment_templates/kong-templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $deployment
  namespace: $namespace
  labels:
    app: $deployment
    service: $service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $deployment
      app.kubernetes.io/component: api_gateway
      app.kubernetes.io/instance: $deployment
      app.kubernetes.io/managed-by: ansible
      app.kubernetes.io/name: $service
      app.kubernetes.io/part-of: banking
      app.kubernetes.io/version: kongversion_small
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: $deployment
        app.kubernetes.io/component: api_gateway
        app.kubernetes.io/instance: $deployment
        app.kubernetes.io/managed-by: ansible
        app.kubernetes.io/name: $service
        app.kubernetes.io/part-of: banking
        app.kubernetes.io/version: kongversion_small
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: '8001'
        prometheus.io/scheme: http
        prometheus.io/scrape: 'true'
    spec:
      containers:
        - name: kong
          image: $docker_image
          ports:
            - name: admin
              containerPort: 8001
              protocol: TCP
            - name: proxy
              containerPort: 8000
              protocol: TCP
            - name: proxy-ssl
              containerPort: 8443
              protocol: TCP
            - name: admin-ssl
              containerPort: 8444
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 525Mi
            requests:
              cpu: 50m
              memory: 512Mi
