deployment_templates/kong-templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: $service
  namespace: $namespace
  labels:
    service: $deployment
    app: $service
status:
  loadBalancer: {}
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app.kubernetes.io/instance: $deployment
  type: ClusterIP
  sessionAffinity: None
