deployment_templates/kong-templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $service
  namespace: $namespace
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: $service
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    purpose: ingress
spec:
  tls:
    - hosts:
        - $hostname
      secretName: ces-secret
  rules:
    - host: $hostname
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: $service
                port:
                  number: 8000
